# brainfast

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README  README.md  assembler.cpp  benchmark.py  compiler.cpp  compiler.h  emitter.cpp  emitter.h  intermediate.cpp  intermediate.h  main.c  main.cpp  optimize.cpp  optimize.h  parser.cpp  parser.h
benchmarks/: __init__.py  __main__.py  factor.in  factor.out
test/: __init__.py  __main__.py
